<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:background="@drawable/backcor"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorecounter.Main2Activity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/b2" />

    <TextView
        android:id="@+id/teamAName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/teamBName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/scoreTeamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:text="@string/init"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/scoreTeamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/init"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <Button
        android:id="@+id/goalA"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ingame_buttons"
        android:text="@string/goal"
        app:layout_constraintStart_toStartOf="@+id/teamAName"
        app:layout_constraintTop_toBottomOf="@+id/cornersA" />

    <Button
        android:id="@+id/goalB"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ingame_buttons"
        android:text="@string/goal"
        app:layout_constraintEnd_toEndOf="@+id/teamBName"
        app:layout_constraintTop_toBottomOf="@+id/cornersB" />

    <Button
        android:id="@+id/plusRedA"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="@+id/goalA"
        app:layout_constraintTop_toBottomOf="@+id/goalA" />

    <Button
        android:id="@+id/plusYellowA"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="@+id/plusRedA"
        app:layout_constraintTop_toBottomOf="@+id/plusRedA" />

    <Button
        android:id="@+id/plusCornerA"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="@+id/plusYellowA"
        app:layout_constraintTop_toBottomOf="@+id/plusYellowA" />

    <Button
        android:id="@+id/plusRedB"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="@+id/goalB"
        app:layout_constraintTop_toBottomOf="@+id/goalB" />

    <Button
        android:id="@+id/plusYellowB"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="@+id/plusRedB"
        app:layout_constraintTop_toBottomOf="@+id/plusRedB" />

    <Button
        android:id="@+id/plusCornerB"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="@+id/plusYellowB"
        app:layout_constraintTop_toBottomOf="@+id/plusYellowB" />



    <Button
        android:id="@+id/reset1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/red"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/goalA"
        app:layout_constraintTop_toBottomOf="@+id/goalA" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/yellow"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/corner"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/red"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/goalB"
        app:layout_constraintTop_toBottomOf="@+id/goalB" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/yellow"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/corner"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/redA"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="52dp"
        android:drawableLeft="@drawable/redcard"
        android:drawableStart="@drawable/redcard"
        android:text="@string/init"
        app:layout_constraintStart_toStartOf="@+id/teamAName"
        app:layout_constraintTop_toBottomOf="@+id/scoreTeamA" />

    <TextView
        android:id="@+id/yellowA"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:drawableLeft="@drawable/yellowcard"
        android:drawableStart="@drawable/yellowcard"
        android:gravity="end"
        android:text="@string/init"
        app:layout_constraintStart_toStartOf="@+id/redA"
        app:layout_constraintTop_toBottomOf="@+id/redA" />

    <TextView
        android:id="@+id/cornersA"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:drawableLeft="@drawable/corner"
        android:text="@string/init"
        app:layout_constraintStart_toStartOf="@+id/yellowA"
        app:layout_constraintTop_toBottomOf="@+id/yellowA" />

    <TextView
        android:id="@+id/redB"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="52dp"
        android:drawableLeft="@drawable/redcard"
        android:drawableStart="@drawable/redcard"
        android:text="@string/init"
        app:layout_constraintEnd_toEndOf="@+id/teamBName"
        app:layout_constraintTop_toBottomOf="@+id/scoreTeamB" />

    <TextView
        android:id="@+id/yellowB"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:drawableLeft="@drawable/yellowcard"
        android:drawableStart="@drawable/yellowcard"
        android:text="@string/init"
        app:layout_constraintEnd_toEndOf="@+id/redB"
        app:layout_constraintTop_toBottomOf="@+id/redB" />

    <TextView
        android:id="@+id/cornersB"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:drawableLeft="@drawable/corner"
        android:drawableStart="@drawable/corner"
        android:text="@string/init"
        app:layout_constraintEnd_toEndOf="@+id/yellowB"
        app:layout_constraintTop_toBottomOf="@+id/yellowB" />

</android.support.constraint.ConstraintLayout>

